--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     </section>
     <section class="contact" id="contact">
       <div class="container">
-        <div class="row">
+        <div class="row justify-space-bet">
           <div class="col-6 col-mp-12">
             <div class="img-box">
               <img  class="img-res" src="https://i.ibb.co/DChbfYg/contact.webp" alt="contact">
