--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
     </aside>
     <div class="banner" id="banner">
       <div class="container">
-        <h2>Hi I'am a <span>| </span></h2>
+        <h2>Hi I'am a <span id="text-tech">| </span></h2>
         <div class="">
-          <button class="btn">Hire Me</button>
-          <button class="btn">My Resume</button>
+          <button onclick="window.open('https://wa.me/7677174030')" class="btn">Hire Me</button>
+          <button onclick="window.open('../assets/Resume_Vishwajeet_FullStack.pdf')" class="btn">My Resume</button>
         </div>
       </div>
     </div>
@@ -167,7 +167,6 @@
         </div>
       </div>
     </section>
-
 
     <script src="./js/main.js" defer></script>
   </body>
