--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
     </aside>
     <div class="banner" id="banner">
       <div class="container">
-        <h2>Hi I'am a <span id="text-tech">| </span></h2>
+        <h2>Hi I'am a <br><span id="text-tech">| </span></h2>
         <div class="">
           <button onclick="window.open('https://wa.me/7677174030')" class="btn">Hire Me</button>
-          <button onclick="window.open('../assets/Resume_Vishwajeet_FullStack.pdf')" class="btn">My Resume</button>
+          <button onclick="window.open('./assets/Resume_Fullstack.pdf')" class="btn">My Resume</button>
         </div>
       </div>
     </div>
@@ -58,7 +58,7 @@
     </section>
     <section class="project" id="project">
       <div class="container">
-        <div class="row projects">
+        <div class="row justify-evn gap projects">
           <div class="col-12"><h2>Top Recent Projects</h2></div>
         </div>
       </div>
@@ -69,41 +69,53 @@
           <div class="col-12">
             <h2>Education</h2>
           </div>
-          <div class="col-4">
-            <div class="box">
-              <h3>MCA</h3>
-              <small>Patna University, India</small>
-            </div>
+          <div class="col-12">
+            <ul class="flex">
+              <li>
+                <div class="box">
+                  <h3>MCA</h3>
+                  <small>Patna University, India</small>
+                </div>
+              </li>
+              <li>
+                <div class="box"><span class="fa-solid fa-graduation-cap"></span> <small>Post Graduation</small></div>
+              </li>
+              <li>
+                <div class="box"><span>2021 - 2023</span></div>
+              </li>
+            </ul>
           </div>
-          <div class="col-3">
-            <div class="box"><span class="fa-solid fa-graduation-cap"></span> <small>Post Graduation</small></div>
+          <div class="col-12">
+            <ul class="flex">
+              <li>
+                <div class="box">
+                  <h3>BCA</h3>
+                  <small>Indira Gandhi National Open University, India</small>
+                </div>
+              </li>
+              <li>
+                <div class="box"><span class="fa-solid fa-graduation-cap"></span> <small>Graduation</small></div>
+              </li>
+              <li>
+                <div class="box"><span>2018 - 2021</span></div>
+              </li>
+            </ul>
           </div>
-          <div class="col-4">
-            <div class="box"><span>2021 - 2023</span></div>
-          </div>
-          <div class="col-4">
-            <div class="box">
-              <h3>BCA</h3>
-              <small>Indira Gandhi National Open University</small>
-            </div>
-          </div>
-          <div class="col-3">
-            <div class="box"><span class="fa-solid fa-graduation-cap"></span> <small>Graduation</small></div>
-          </div>
-          <div class="col-4">
-            <div class="box"><span>2018 - 2021</span></div>
-          </div>
-          <div class="col-4">
-            <div class="box">
-              <h3>Intermediate</h3>
-              <small>Bihar School Examination Board, India</small>
-            </div>
-          </div>
-          <div class="col-3">
-            <div class="box"><span class="fa-solid fa-graduation-cap"></span> <small>Intermediate</small></div>
-          </div>
-          <div class="col-4">
-            <div class="box"><span>2016 - 2017</span></div>
+          <div class="col-12">
+            <ul class="flex">
+              <li>
+                <div class="box">
+                  <h3>MCA</h3>
+                  <small>Bihar School Examination Board, India</small>
+                </div>
+              </li>
+              <li>
+                <div class="box"><span class="fa-solid fa-graduation-cap"></span> <small>Intermediate</small></div>
+              </li>
+              <li>
+                <div class="box"><span>2016 - 2017</span></div>
+              </li>
+            </ul>
           </div>
         </div>
       </div>
@@ -133,8 +145,8 @@
             <h2>Work Experience</h2>
           </div>
           <div class="col-12">
-            <h3>Frontend Development with React</h3>
-            <p>Tech Altum, Noida <br>
+            <h3>Frontend Development with React <br>Tech Altum, Noida</h3>
+            <p>
               Currently undergoing training in frontend development with a focus on React.js.
             </p>
           </div>
