--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
+    <link rel="shortcut icon" href="./images/portfolio.jpg" type="image/x-icon">
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
@@ -89,15 +90,15 @@
             <ul class="flex">
               <li>
                 <div class="box">
-                  <h3>BCA</h3>
-                  <small>Indira Gandhi National Open University, India</small>
+                  <h3>B.Sc</h3>
+                  <small>LNMU Darbhanga, India</small>
                 </div>
               </li>
               <li>
                 <div class="box"><span class="fa-solid fa-graduation-cap"></span> <small>Graduation</small></div>
               </li>
               <li>
-                <div class="box"><span>2018 - 2021</span></div>
+                <div class="box"><span>2017 - 2020</span></div>
               </li>
             </ul>
           </div>
@@ -105,7 +106,7 @@
             <ul class="flex">
               <li>
                 <div class="box">
-                  <h3>MCA</h3>
+                  <h3>Intermediate</h3>
                   <small>Bihar School Examination Board, India</small>
                 </div>
               </li>
