--- a/index.html
+++ b/index.html
@@ -90,15 +90,15 @@
             <ul class="flex">
               <li>
                 <div class="box">
-                  <h3>B.Sc</h3>
-                  <small>LNMU Darbhanga, India</small>
+                  <h3>BCA</h3>
+                  <small>IGNOU, India</small>
                 </div>
               </li>
               <li>
                 <div class="box"><span class="fa-solid fa-graduation-cap"></span> <small>Graduation</small></div>
               </li>
               <li>
-                <div class="box"><span>2017 - 2020</span></div>
+                <div class="box"><span>2018 - 2021</span></div>
               </li>
             </ul>
           </div>
