--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
           <div class="col-8 col-mp-12">
             <h2>About</h2>
             <p>
-              Enthusiastic and skilled React Frontend Developer with hands-on
-              experience in developing responsive web applications. Proficient
-              in HTML, CSS, and JavaScript. Strong problem-solving skills with a
-              passion for clean and efficient coding. Currently undergoing
-              advanced training in frontend development with React.
+              Dynamic web developer skilled in fullstack development, with expertise in ReactJS, Java, and Spring Boot for building
+              secure, scalable applications. Proficient in HTML, CSS, JavaScript, and Redux for
+              frontend, and experienced in Hibernate, MySQL, and JWT for backend security
+              and data management. Familiar with Git, Docker, and Agile for streamlined project workflows.
+
             </p>
           </div>
         </div>
@@ -136,6 +136,9 @@
           <div class="col-3 col-t-4 col-mp-6"><div class="tech-box"><span class="fa"></span>NodeJs</div></div>
           <div class="col-3 col-t-4 col-mp-6"><div class="tech-box"><span class="fa"></span>ExpressJs</div></div>
           <div class="col-3 col-t-4 col-mp-6"><div class="tech-box"><span class="fa"></span>Mongodb</div></div>
+          <div class="col-3 col-t-4 col-mp-6"><div class="tech-box"><span class="fa"></span>Spring Boot Toolkit</div></div>
+          <div class="col-3 col-t-4 col-mp-6"><div class="tech-box"><span class="fa"></span>Core Java</div></div>
+          <div class="col-3 col-t-4 col-mp-6"><div class="tech-box"><span class="fa"></span>MySQL</div></div>
         </div>
       </div>
     </section>
