--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <h2>Hi I'am a <br><span id="text-tech">| </span></h2>
         <div class="">
           <button onclick="window.open('https://wa.me/7677174030')" class="btn">Hire Me</button>
-          <button onclick="window.open('./assets/ResumeVishwajeetKumar.pdf')" class="btn">My Resume</button>
+          <button onclick="window.open('./assets/Resume2.pdf')" class="btn">My Resume</button>
         </div>
       </div>
     </div>
